blueox (0.8.3)

  * Register atexit function to prevent hangs.

-- Rhett Garber <rhettg@gmail.com>  Wed, 22 Oct 2014 17:33:00 -0700

blueox (0.8.2)

  * Disable buffering for oxview stdin
  * Fix issue in tornado_utils with catching timeouts in httpclient
  * Enhancment to oxstash so we now use bulk operations API to elasticsearch

-- Rhett Garber <rhettg@gmail.com>  Wed, 16 Apr 2014 16:05:00 -0700

blueox (0.8.1)

  * Restrict streaming port allocation to a predefined range.

-- Rhett Garber <rhettg@gmail.com>  Mon, 31 Mar 2014 13:48:00 -0700

blueox (0.8.0)

  * new oxstash tool for shipping logs to elasticsearch

-- Rhett Garber <rhettg@gmail.com>  Fri, 28 Mar 2014 15:11:00 -0700

blueox (0.7.1)

  * Fixes to tornado coroutine where we properly return values

-- Rhett Garber <rhettg@gmail.com>  Mon, 17 Mar 2014 11:35:00 -0700

blueox (0.7.0)

  * Rewrite of tornado_utils to support tornado > 3.0
  * Leave logging configuration in Django to normal LOGGING settings.

-- Rhett Garber <rhettg@gmail.com>  Fri, 14 Mar 2014 17:36:00 -0700

blueox (0.6.0)

  * Introduce new utility, oxingest
  * Add support for datetime.date serialization

-- Rhett Garber <rhettg@gmail.com>  Mon, 2 Dec 2013 18:04:00 -0800

blueox (0.5.10)

  * Bad distribution

-- Rhett Garber <rhettg@gmail.com>  Fri, 22 Nov 2013 18:47:00 -0800

blueox (0.5.9)

  * Update contrib support for celery 3.1.4
  * Add datetime serialization to msg pack encoder

-- Rhett Garber <rhettg@gmail.com>  Thu, 21 Nov 2013 15:08:00 -0800

blueox (0.5.8)

  * Fix oxview issue where multiple lines would be printed if JSON was enabled. (wonga00)

-- Rhett Garber <rhettg@gmail.com>  Tue, 19 Nov 2013 10:49:00 -0800

blueox (0.5.7)

  * Enhanced Django middleware to optionally include 'version' or 'revision'
    request attributes.

-- Rhett Garber <rhettg@gmail.com>  Thu, 14 Nov 2013 15:53:00 -0800

blueox (0.5.6)

  * Fixed bug in Django middleware where blocked requests caused response error.