@@ -1,3 +1,9 @@
+blueox (0.8.4)
+
+  * Fix logging LogHandler to respect defined type name.
+
+-- Rhett Garber <rhettg@gmail.com>  Thu, 23 Oct 2014 15:15:00 -0700
+
 blueox (0.8.3)
 
   * Register atexit function to prevent hangs.
